# ClimbingMonkey

./: ROSwithBT_test1.btproj  ROSwithBT_test1.xml  Screencast from 03-25-2024 12:22:39 AM.webm  zed_bt_test.cpp
BT/: UpperClampTimeTest.btproj
BT/ClampsTestfor442024/: ClampTest.btproj  ClampTest.xml
BT/DoubleClampHD/: DoubleClampHD.btproj  DoubleClampHD.xml
BT/FullSysHD/: FullSysHD.btproj  FullSysHD.xml
BT/FullSys_noHD/: FullSys_noHD.btproj  FullSys_noHD.xml
BT/GetPosServiceTest/: GetPosTest.btproj
BT/LAHD/: LAHD.btproj  LAHD.xml
BT/LAonly/: LAonly.xml
BT/New0 - HD+JIC/: New0HDJIC.xml
BT/New001/: New001.btproj  New001.xml
FYP BT for Testing/DownCycleTimeTest/: DownCycleTimeTest.btproj  DownCycleTimeTest.xml
FYP BT for Testing/HDonly/: HDonly.xml
FYP BT for Testing/LATimeTest/: LATimeTest.xml
FYP BT for Testing/LowerClampTimeTest/: LowerClampTimeTest.xml
FYP BT for Testing/New001_noHD/: New001_noHD.xml
FYP BT for Testing/UpCycleTimeTest/: UpCycleTimeTest.btproj
FYP BT for Testing/UpperClampTimeTest/: UpperClampTimeTest.xml
FYP Testing/DownCycleTimeTest/: DownCycleTimeTest.xml
FYP Testing/LATimeTest/: LATimeTest.xml
FYP Testing/LowerClampTimeTest/: LowerClampTimeTest.xml
FYP Testing/New001_noHD/: New001_noHD.btproj  New001_noHD.xml
FYP Testing/UPStartingPos/: UPStartingPos.btproj  UPStartingPos.xml
FYP Testing/UpCycleTimeTest/: UpCycleTimeTest.btproj  UpCycleTimeTest.xml
FYP Testing/UpperClampTimeTest/: UpperClampTimeTest.btproj  UpperClampTimeTest.xml
FinalPackages1/monkey_client/: CMakeLists.txt  package.xml
FinalPackages1/monkey_interface/: CMakeLists.txt
FinalPackages2/monkey_interface/: package.xml
FinalPackages2/monkey_server/: package.xml  setup.py
FinalPackages_forUploadGitHub/: SpeedData.csv  SpeedData1.csv  saved_extension.txt
LA package/: IDSServoDriver.py  IDSServoDriver_edited.py  SetExtension.action  cylinder_ROS_client.py  cylinder_ROS_server.py  cylinder_interface.py
New0/: New0.btproj  New0.xml
New0 - HD+JIC/: New0HDJIC.btproj  New0HDJIC.xml  Project.btproj
New0 - HeightDetection/: New0HD.btproj  New0HD.xml
New001/: New001.btproj  New001.xml
ServoMotor Package_V2/: DCHCAN.eds  DMKEClient_BT.cpp  DMKEServoDriver2.py  DMKE_Interface.py  DMKE_Interface_Test.py  DMKE_Interface_Test2.py  DMKE_Interface_TestCurrent.py  DMKE_Interface_TestSpeed.py  GetPos_Client.py  GetPos_Server.py  SetPosition.action  SetPositionClient.py  SetPositionClient_BT.cpp  SetPositionServer.py  test1.py  test2.py
ServoMotor Package_V2/my_monkey/: Dockerfile  package.xml  setup.cfg  setup.py
ServoMotor Package_V2/my_monkey/launch/: DMKE_launch.py
ServoMotor Package_V2/my_monkey/my_monkey/: DMKEServoDriver2.py  DMKE_Interface_ROS.py
ServoMotor Package_V2/zeroerr_python-master/: DCHCAN.eds  Rviz_CANopen_interface.py  ZeroErr.py  zeroerr_test2.py
cylinder_bt_test/: CMakeLists.txt  package.xml
cylinder_bt_test/src/: cylinder_bt_test1.cpp
cylinder_test/: package.xml  setup.cfg  setup.py
cylinder_test/cylinder_test/: IDSServoDriver.py  IDSServoDriver_EDITED.py  IDSServoDriver_NEW.py  cylinder_client.py  cylinder_server.py
dmke_bt_test/: CMakeLists.txt  package.xml
dmke_bt_test/src/: dmke_bt_test2.cpp
dmke_interface/: CMakeLists.txt  package.xml
dmke_interface/action/: SetExtension.action  SetPosition.action
dmke_interface/srv/: GetExtension.srv  GetPosition.srv  GetSpeed.srv
dmke_package/: setup.py
dmke_package/dmke_package/: DCHCAN.eds  DMKEServoDriver2.py  GetPosition_client.py  SetPosition_client.py  SetPosition_server.py
src/action_interface/: CMakeLists.txt  package.xml
src/clamp_control/: package.xml  setup.cfg  setup.py
src/clamp_control2/: package.xml  setup.py
src/dmke_bt_test/: CMakeLists.txt  package.xml
zed2i_bt_sub/: CMakeLists.txt  package.xml
zed2i_bt_sub/src/: zed2i_bt_sub.cpp
zed2itest/: CMakeLists.txt  package.xml
zed2itest2/: CMakeLists.txt  package.xml
(+74 files in other folders)
