<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed2i_bt_sub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bky@todo.todo">bky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <depend>behaviortree_ros2</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <!-- <depend>behaviortree_cpp</depend> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
