<?xml version="1.0"?>
<package format="3">
  <name>dmke_action</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 package for controlling DMKE servo motors with actions.
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>canopen</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>DMKE_action</depend>
  <!-- Add any additional dependencies here -->

  <!-- Exported Libraries -->
  <export>
    <!-- Specify additional paths or libraries to export -->
  </export>
</package>
